[package]
name = "macrame"
description = "This is a set of macros that builds on wasm-bindgen"
version = "0.0.1"
authors = ["Elizabeth Marston <liz.mars@pm.me>"]
repository = "https://github.com/elmarsto/spar-rs"
edition = "2018"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }